...
    <string name="testing_button">Testing</string>
    <string name="create_button">Create</string>
    <string name="details_screen">Details Screen</string>
    <string name="expanded_profile_screen">Expanded Profile Screen</string>
    <string name="details">Details</string>
    <string name="plus_button">+</string>
    <string name="add_debt_transaction">Add Transaction</string>
    <string name="groups">Group</string>
    <string name="add_group_transaction">Add Group</string>
    <string name="filter">Filter</string>
    <string name="expanded_groups_screen">Expanded Group Screen</string>
    <string name="filter_amount_high">Filter Amount High</string>
    <string name="filter_amount_low">Filter Amount Low</string>
...
